--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -18,10 +18,10 @@ jobs:
         uses: docker/setup-buildx-action@v3
 
       - name: Build Docker image
-        run: docker build -f flask-docker-app ./app
+        run: docker build -t flask-docker-app ./app
 
       - name: Run Docker Compose
-        run: docker compose -f docker-compose.yml up -d
+        run: docker compose -t docker-compose.yml up -d
 
       - name: Test the app
         run: |
