--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -39,7 +39,7 @@ jobs:
         with:
           context: ./app
           file: ./app/Dockerfile
-          platforms: linux/amd64,linux/arm64z
+          platforms: linux/amd64,linux/arm64
           push: true
           tags: alonsocorona/flask-docker-app:latest 
 
