--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -41,7 +41,7 @@ jobs:
           file: ./app/Dockerfile
           platforms: linux/amd64,linux/arm64
           push: true
-          tags: alonsocorona/flask-docker-app:latest 
+          tags: alonsocorona/flask-docker-app:latest
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v2
@@ -64,7 +64,7 @@ jobs:
           cd Desktop/ProyectosDevOps/
           rm -rf DevOps-act3
           git clone https://github.com/NaJaGa/mi-repositorio-devops.git
-          cd DevOps-act3
+          cd mi-repositorio-devops
           python3 -m venv venv
           source venv/bin/activate
           pip install --upgrade pip
