--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -62,7 +62,7 @@ jobs:
           sudo apt update
           sudo apt install -y python3 python3-pip python3-venv git
           cd Desktop/ProyectosDevOps/
-          rm -rf DevOps-act3
+          rm -rf mi-repositorio-devops
           git clone https://github.com/NaJaGa/mi-repositorio-devops.git
           cd mi-repositorio-devops
           python3 -m venv venv
